fix checkout header covering the cart

--- a/skin/frontend/default/default/css/ewall/onepage.css
+++ b/skin/frontend/default/default/css/ewall/onepage.css
@@ -449,7 +449,7 @@
      position: relative;
      width: 100%;
      height: 90px;
-     z-index: 9999;
+     /*z-index: 9999;*/
      overflow:hidden;
    }
    #checkoutSteps-header .section {
@@ -478,7 +478,7 @@
      padding:0;
 
      display: inline-block;
-     z-index: 99999;
+     /*z-index: 99999;*/
    }
 
    body.checkout-onepage-index .main-container {
